--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "dev:preact": "node server.js",
+    "build:preact": "next build",
+    "start:preact": "NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "@zeit/next-preact": "0.1.0",
     "next": "8.0.4",
+    "preact": "8.4.2",
+    "preact-compat": "3.18.4",
+    "preact-context": "1.1.3",
     "react": "16.8.6",
     "react-dom": "16.8.6"
   }
