--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,15 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
       "type": "node",
       "request": "launch",
-      "name": "Next: Dev",
-      "runtimeExecutable": "../node_modules/next/dist/bin/next",
+      "name": "Next",
+      "runtimeExecutable": "${workspaceFolder}/node_modules/next/dist/bin/next",
       "runtimeArgs": ["dev"],
       "env": { "NODE_OPTIONS": "--inspect" },
-      "console": "integratedTerminal",
-      "port": 9229
+      "port": 9229,
+      "console": "integratedTerminal"
     }
   ]
 }
