--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Next",
+      "name": "Next: Dev",
       "runtimeExecutable": "${workspaceFolder}/node_modules/next/dist/bin/next",
       "runtimeArgs": ["dev"],
       "env": { "NODE_OPTIONS": "--inspect" },
