--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@zeit/next-preact": "0.1.0",
     "next": "8.0.4",
-    "preact": "8.4.2",
+    "preact": "10.0.0-alpha.4",
     "preact-compat": "3.18.4",
     "preact-context": "1.1.3",
     "react": "16.8.6",
